@@ -1,7 +1,7 @@
 # This testcase is part of GDB, the GNU debugger.
 
-# Copyright 1992, 1994-1997, 1999-2000, 2002-2004, 2007-2012 Free
-# Software Foundation, Inc.
+# Copyright 1992, 1994, 1995, 1996, 1997, 1999, 2000, 2002, 2003, 2004, 2007,
+# 2008, 2009, 2010 Free Software Foundation, Inc.
 
 # This program is free software; you can redistribute it and/or modify
 # it under the terms of the GNU General Public License as published by
@@ -21,6 +21,11 @@
 
 # This file was written by Fred Fish. (fnf@cygnus.com)
 
+if $tracelevel then {
+	strace $tracelevel
+}
+
+
 set testfile "printcmds"
 set srcfile ${testfile}.c
 set binfile ${objdir}/${subdir}/${testfile}
@@ -30,6 +35,22 @@ if  { [gdb_compile "${srcdir}/${subdir}/${srcfile}" "${binfile}" executable {deb
 }
 
 get_compiler_info ${binfile}
+
+# Set the current language to C.  This counts as a test.  If it
+# fails, then we skip the other tests.
+
+proc set_lang_c {} {
+    global gdb_prompt
+
+    if [gdb_test_no_output "set language c" "set language c"] {
+	return 0
+    }
+
+    if [gdb_test "show language" ".* source language is \"c\".*"] {
+	return 0
+    }
+    return 1;
+}
 
 proc test_integer_literals_accepted {} {
     global gdb_prompt
@@ -98,6 +119,17 @@ proc test_integer_literals_rejected {} {
 
     test_print_reject "p DEADBEEF"
 
+    # Gdb currently fails this test for all configurations.  The C
+    # lexer thinks that 123DEADBEEF is a floating point number, but
+    # then fails to notice that atof() only eats the 123 part.
+    # FIXME:  This should be put into PRMS.
+    # Fixed, 4/25/97, by Bob Manson.
+
+    test_print_reject "p 123DEADBEEF"
+    test_print_reject "p 123foobar.bazfoo3"
+    test_print_reject "p 123EEEEEEEEEEEEEEEEE33333k333"
+    gdb_test "p 123.4+56.7" "180.(099\[0-9]*|100\[0-9\]*)" "check for floating addition"
+
     # Test various octal values.
 
     test_print_reject "p 09" 
@@ -112,49 +144,6 @@ proc test_integer_literals_rejected {} {
 
     test_print_reject "p 0b2" 
     test_print_reject "p 0b12" 
-}
-
-proc test_float_accepted {} {
-    global gdb_prompt
-
-    # This test is useful to catch successful parsing of the first fp value.
-    gdb_test "p 123.4+56.7" " = 180.(099\[0-9]*|100\[0-9\]*)" "check for floating addition"
-
-    # Test all the suffixes (including no suffix).
-    gdb_test "p 1." " = 1"
-    gdb_test "p 1.5" " = 1.5"
-    gdb_test "p 1.f" " = 1"
-    gdb_test "p 1.5f" " = 1.5"
-    gdb_test "p 1.l" " = 1"
-    gdb_test "p 1.5l" " = 1.5"
-
-    # Test hexadecimal floating point.
-    set test "p 0x1.1"
-    gdb_test_multiple $test $test {
-	-re " = 1\\.0625\r\n$gdb_prompt $" {
-	    pass $test
-	}
-	-re "Invalid number \"0x1\\.1\"\\.\r\n$gdb_prompt $" {
-	    # Older glibc does not support hex float, newer does.
-	    xfail $test
-	}
-    }
-}
-
-proc test_float_rejected {} {
-    # Gdb use to fail this test for all configurations.  The C
-    # lexer thought that 123DEADBEEF was a floating point number, but
-    # then failed to notice that atof() only eats the 123 part.
-    # Fixed, 4/25/97, by Bob Manson.
-    test_print_reject "p 123DEADBEEF"
-
-    test_print_reject "p 123foobar.bazfoo3"
-    test_print_reject "p 123EEEEEEEEEEEEEEEEE33333k333"
-
-    # Test bad suffixes.
-    test_print_reject "p 1.1x"
-    test_print_reject "p 1.1ff"
-    test_print_reject "p 1.1ll"
 }
 
 proc test_print_all_chars {} {
@@ -470,18 +459,6 @@ proc test_print_repeats_10 {} {
     }
 }
 
-# This tests whether GDB uses the correct element content offsets
-# (relative to the complete `some_struct' value) when counting value
-# repetitions.
-
-proc test_print_repeats_embedded_array {} {
-    global gdb_prompt
-
-    gdb_test_escape_braces "p/x some_struct" \
-	"= {a = 0x12345678, b = 0x87654321, array = {0xaa <repeats 20 times>}}" \
-	"correct element repeats in array embedded at offset > 0"
-}
-
 proc test_print_strings {} {
     global gdb_prompt
 
@@ -697,8 +674,6 @@ proc test_print_array_constants {} {
 proc test_print_enums {} {
     # Regression test for PR11827.
     gdb_test "print some_volatile_enum" "enumvolval1"
-
-    gdb_test "print three" " = \\\(ONE \\| TWO\\\)"
 }
 
 proc test_printf {} {
@@ -806,37 +781,34 @@ gdb_test_no_output "set print sevenbit-strings"
 gdb_test_no_output "set print address off"
 gdb_test_no_output "set width 0"
 
-if { [test_compiler_info "armcc-*"] } {
-    # ARM RealView compresses large arrays in the data segment.
-    # Before the program starts, we can not read them.  There is
-    # nothing in the file to indicate that data is compressed.
-    setup_xfail "arm*-*-eabi"
-}
-gdb_test "p ctable1\[120\]" "120 'x'" "p ctable1\[120\] #1"
+if [set_lang_c] then {
+    if { [test_compiler_info "armcc-*"] } {
+	# ARM RealView compresses large arrays in the data segment.
+	# Before the program starts, we can not read them.  There is
+	# nothing in the file to indicate that data is compressed.
+	setup_xfail "arm*-*-eabi"
+    }
+    gdb_test "p ctable1\[120\]" "120 'x'" "p ctable1\[120\] #1"
 
-gdb_load ${binfile}
-
-if ![runto_main] then {
-    fail "Can't run to main"
-    return 0
-}
-
-test_integer_literals_accepted
-test_integer_literals_rejected
-test_float_accepted
-test_float_rejected
-test_character_literals_accepted
-test_print_all_chars
-test_print_repeats_10
-test_print_repeats_embedded_array
-test_print_strings
-test_print_int_arrays
-test_print_typedef_arrays
-test_artificial_arrays
-test_print_char_arrays
+    gdb_load ${binfile}
+    if [runto_main] then {
+	test_integer_literals_accepted
+	test_integer_literals_rejected
+	test_character_literals_accepted
+	test_print_all_chars
+	test_print_repeats_10
+	test_print_strings
+	test_print_int_arrays
+	test_print_typedef_arrays
+	test_artificial_arrays
+	test_print_char_arrays
 # We used to do the runto main here.
-test_print_string_constants
-test_print_array_constants
-test_print_enums
-test_printf
-test_printf_with_dfp
+	test_print_string_constants
+	test_print_array_constants
+	test_print_enums
+	test_printf
+	test_printf_with_dfp
+    }
+} else {
+    fail "C print command tests suppressed"
+}
